Compiler/tests/good/range1.nx
type t = [0 .. 6];

printn(size(t));

