Compiler/tests/bad/bool10.nx
type t = [0 .. 1];

printn(t == t);
